deployments/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voip-backend
  labels:
    app.kubernetes.io/name: voip-backend
spec:
  selector:
    matchLabels:
      app: voip-backend
  template:
    metadata:
      labels:
        app: voip-backend
    spec:
      containers:
      - name: voip-backend
        image: sjc.vultrcr.com/voipservices/voip-backend:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
      imagePullSecrets:
      - name: vultr-cr-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app.kubernetes.io/name: voip-backend
  ports:
  - name: backend-service-port
    protocol: TCP
    port: 8000
    targetPort: voip-backend
